--- a/index.html
+++ b/index.html
@@ -108,17 +108,23 @@
       <div class="wrapper">
         <div data-scroll class="appear">
           <p data-scroll data-scroll-speed="-1" data-scroll-direction="horizontal">
-            Wordpress/PrestaShop
+            Wordpress
           </p>
         </div>
-      </div>
-      <div class="wrapper">
-        <div data-scroll class="appear">
-          <p data-scroll data-scroll-speed="-6" data-scroll-direction="horizontal">
-            Figma/AdobeXD
-          </p>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p data-scroll data-scroll-speed="3" data-scroll-direction="horizontal">
+              PrestaShop
+            </p>
+          </div>
         </div>
-      </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p data-scroll data-scroll-speed="-6" data-scroll-direction="horizontal">
+              Figma/AdobeXD
+            </p>
+          </div>
+        </div>
     </section>
 
     <div data-scroll class="line-wrapper">
