--- a/index.html
+++ b/index.html
@@ -175,20 +175,20 @@
     <footer>
       <div class="wrapper">
         <div data-scroll class="appear">
-          <p>Vous avez un projet ?</p>
+          <p>You have a project ?</p>
         </div>
       </div>
       <div class="wrapper">
         <div data-scroll class="appear" id="l2">
           <p>
-            Je serai ravi d'en
+            I will be happy to discuss it
             <a href="mailto:ufcmjohan@gmail.com">discuter</a>
           </p>
         </div>
       </div>
       <div class="wrapper">
         <div data-scroll class="appear" id="l3">
-          <p>avec vous</p>
+          <p>with you</p>
         </div>
       </div>
       <div data-scroll data-scroll-speed="7" data-scroll-position="bottom" class="img-wrapper">
