--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
       <div class="wrapper">
         <div data-scroll class="appear" id="l2">
           <p>
-            I will be happy to discuss it
-            <a href="mailto:ufcmjohan@gmail.com">discuter</a>
+            I will be happy to
+            <a href="mailto:ufcmjohan@gmail.com">discuss</a> it
           </p>
         </div>
       </div>
