:style: add btn discuss

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div data-scroll class="appear" id="l2">
           <p>
             I will be happy to
-            <a href="mailto:ufcmjohan@gmail.com">discuss</a> it
+            <a class="btn1" id="discuss" href="mailto:ufcmjohan@gmail.com">discuss</a> it
           </p>
         </div>
       </div>
@@ -194,7 +194,7 @@
       <div data-scroll data-scroll-speed="7" data-scroll-position="bottom" class="img-wrapper">
         <div class="img img2"></div>
       </div>
-      <br /><br /><br />
+      <br /><br />
     </footer>
   </div>
 
