--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header data-scroll>
       <div class="links">
         <a href="#portfolio" data-scroll-to>portfolio</a>
-        <a href="mailto:jeanscratch@gmail.com">contact</a>
+        <a href="mailto:ufcmjohan@gmail.com">contact</a>
       </div>
       <div class="wrapper">
         <div data-scroll class="appear" id="h1-wrapper">
@@ -28,14 +28,14 @@
       <div data-scroll data-scroll-repeat="true" class="wrapper" id="color">
         <div data-scroll class="appear" id="h2-1">
           <h2 data-scroll data-scroll-speed="6" data-scroll-direction="horizontal" data-scroll-position="left">
-            Développeur
+          Web/Mobile
           </h2>
         </div>
       </div>
       <div class="wrapper">
         <div data-scroll class="appear" id="h2-2">
           <h2 data-scroll data-scroll-speed="-6" data-scroll-direction="horizontal" data-scroll-position="left">
-            Front-end
+           Developer
           </h2>
         </div>
       </div>
@@ -55,7 +55,7 @@
       </div>
       <p>
         Hello I'm Johan.B
-        <br>I'm a front-end developer
+        <br>I'm a Web Developer
         <br>passionate and sensitive to UX Design
       </p>
     </section>
@@ -87,15 +87,14 @@
       <div class="wrapper">
         <div data-scroll class="appear">
           <p data-scroll data-scroll-speed="1" data-scroll-direction="horizontal">
-            React
+            React.js
           </p>
         </div>
       </div>
       <div class="wrapper">
         <div data-scroll class="appear">
           <p data-scroll data-scroll-speed="-6" data-scroll-direction="horizontal">
-            CSS/SASS
-          </p>
+            React Native
         </div>
       </div>
       <div class="wrapper">
@@ -108,20 +107,20 @@
       <div class="wrapper">
         <div data-scroll class="appear">
           <p data-scroll data-scroll-speed="-1" data-scroll-direction="horizontal">
-            Wordpress
+            Wordpress/Shopify
           </p>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear">
             <p data-scroll data-scroll-speed="3" data-scroll-direction="horizontal">
-              PrestaShop
+             Scrum & Git Teamwork
             </p>
           </div>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear">
             <p data-scroll data-scroll-speed="-6" data-scroll-direction="horizontal">
-              Figma/AdobeXD
+              Figma
             </p>
           </div>
         </div>
@@ -145,16 +144,16 @@
       </h2>
       <div class="projects-container">
         <div data-scroll data-scroll-speed="1" class="project" id="p1">
-          <img src="./assets/img/projet-1.jpg" alt="projet 1" />
+          <img src="./assets/img/toDoList.png" alt="projet 1" />
           <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Lyon Beton</a>
-            <p>2020</p>
+            <a href="https://stricken08.github.io/to-do-list-js-vanilla/" target="_blank">To Do List/javascript</a>
+            <p>2023</p>
           </div>
         </div>
         <div data-scroll class="project" id="p2">
           <img src="./assets/img/projet-2.jpg" alt="projet 2" />
           <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Casta</a>
+            <a href="https://stricken08.github.io/REACT-JS-SocialNetworkProject-/" target="_blank">Casta</a>
             <p>2021</p>
           </div>
         </div>
@@ -167,39 +166,80 @@
         </div>
       </div>
     </section>
+    <div id="footer" class="container-fluid text-center py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-8 mx-auto">
+            <div class="git">
 
-    <div data-scroll class="line-wrapper">
-      <div class="line"></div>
+              <a class="px-3" href="https://github.com/syu99" target="_blank"><img><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 496 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                  <path
+                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+                </svg>></a>
+
+              <a href="https://www.linkedin.com/in/johanbray" target="_blank"><img><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                  <path
+                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+                </svg></a>
+            </div>
+          </div>
+          <h5 class="pt-4"> Johan.b &copy; 2023</h5>
+        </div>
+      </div>
+      <div data-scroll class="line-wrapper">
+        <div class="line"></div>
+      </div>
+      <div id="my-background" class="background">
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+        <div class="top-container flex">
+          <footer>            
+              
+              <div class="wrapper">
+                <div data-scroll class="appear">
+                  <p>You have a project ?</p>
+                </div>
+              </div>
+              <div class="wrapper">
+                <div data-scroll class="appear" id="l2">
+                  <p>
+                    I will be happy to
+                    <a class="btn1" id="discuss" href="mailto:ufcmjohan@gmail.com">discuss</a> it
+                  </p>
+                </div>
+              </div>
+              <div class="wrapper">
+                <div data-scroll class="appear" id="l3">
+                  <p>with you</p>
+                </div>
+              </div>
+
+            <div data-scroll data-scroll-speed="7" data-scroll-position="bottom" class="img-wrapper">
+              <div class="img img2"></div>
+            </div>
+            <br /><br />
+          </footer>
+        </div>
+      </div>
+
     </div>
+    <section>
+      <div class="school"><button class="closeBtn">X</button>
+        <div>
+          <img id="logoForm" src="./assets/img/logoForm.png" alt="">
+          <img id="titreForm" src="./assets/img/titreFormation.png" alt="">
+        </div>
+        <div> <img id="form" src="./assets/img/formation.png" alt=""></div>
+      </div>
+    </section>
 
-    <footer>
-      <div class="wrapper">
-        <div data-scroll class="appear">
-          <p>You have a project ?</p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div data-scroll class="appear" id="l2">
-          <p>
-            I will be happy to
-            <a class="btn1" id="discuss" href="mailto:ufcmjohan@gmail.com">discuss</a> it
-          </p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div data-scroll class="appear" id="l3">
-          <p>with you</p>
-        </div>
-      </div>
-      <div data-scroll data-scroll-speed="7" data-scroll-position="bottom" class="img-wrapper">
-        <div class="img img2"></div>
-      </div>
-      <br /><br />
-    </footer>
-  </div>
-
-  <script src="./assets/lib/locomotive-scroll.min.js"></script>
-  <script src="./assets/js/index.js"></script>
+    <script src="./assets/lib/locomotive-scroll.min.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
